--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -34,7 +34,7 @@ jobs:
     timeout-minutes: 60
     if: github.event.inputs.create-pr == 'true'
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
+      - uses: actions/checkout #v4.1.1
         with:
           fetch-depth: '0'
 
