--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -34,7 +34,7 @@ jobs:
     timeout-minutes: 60
     if: github.event.inputs.create-pr == 'true'
     steps:
-      - uses: actions/checkout #v4.1.1
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
         with:
           fetch-depth: '0'
 
@@ -52,7 +52,7 @@ jobs:
       # Create PR with the new branch
       - name: Create Pull Request
         run: |
-          gh pr create -B main -H chore/${{ github.event.inputs.tag }}-release --title 'chore(release): ${{ github.event.inputs.tag }}' --body 'Automated release PR for ${{ github.event.inputs.tag }}
+          gh pr create -B test-release-action -H chore/${{ github.event.inputs.tag }}-release --title 'chore(release): ${{ github.event.inputs.tag }}' --body 'Automated release PR for ${{ github.event.inputs.tag }}
             **Checklist**
             - [ ] Verify package version bumps are accurate
             - [ ] Verify CI passes as expected'
