--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -49,6 +49,17 @@ jobs:
         run: |
           git checkout test-release-action-2
           git push origin test-release-action-2
+
+      - name: Check for conflicts and resolve
+        run: |
+          git merge origin/main
+          if [ $? -ne 0 ]; then
+            echo "Merge conflicts detected"
+            # Resolve conflicts by choosing current version as latest than main
+            git checkout --ours .
+            git add .
+            git commit -m "chore: resolved merge conflicts"
+            
       # Create PR with the new branch
       - name: Create Pull Request
         run: |
