test: dummy conflict

--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -53,10 +53,13 @@ jobs:
       - name: Check for conflicts and resolve
         run: |
           git merge origin/test-release-action
-          echo "Merge conflicts detected"
-          git checkout --ours .
-          git add .
-          git commit -m "chore: resolved merge conflicts"
+            if [ $? -ne 0 ]; then
+              echo "Merge conflicts detected"
+              # Resolve conflicts by choosing current version as latest than main
+              git checkout --ours .
+              git add .
+              git commit -m "chore: resolved merge conflicts"
+            fi
 
       # Create PR with the new branch
       - name: Create Pull Request
