test: dummy conflict

--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Create branch
         run: |
           git checkout test-release-action-2
+          git pull
           git push origin test-release-action-2
 
       - name: Attempt merge
