test: dummy conflict

--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -64,6 +64,7 @@ jobs:
 
           # Attempt to resolve conflicts using interactive rebase
           # git rebase -i origin/test-release-action 
+          git checkout --ours .
 
           # Add a step to check for any remaining conflicts
           # git status 
