test: dummy conflict

--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -59,22 +59,22 @@ jobs:
       - name: Check for conflicts and resolve
         if: failure() && steps.merge-attempt.outcome == 'failure'
         run: |
+          # if [ $? -ne 0 ]; then
+          echo "Merge conflicts detected."
+
+          # Attempt to resolve conflicts using interactive rebase
+          git rebase -i origin/test-release-action 
+
+          # Check for any remaining conflicts
+          git status 
           if [ $? -ne 0 ]; then
-            echo "Merge conflicts detected."
-
-            # Attempt to resolve conflicts using interactive rebase
-            git rebase -i origin/test-release-action 
-
-            # Check for any remaining conflicts
-            git status 
-            if [ $? -ne 0 ]; then
-              echo "Conflicts remain after rebase. Manual resolution required."
-              exit 0 
-            fi
-
-            git add .
-            git commit -m "chore: resolved merge conflicts"
+            echo "Conflicts remain after rebase. Manual resolution required."
+            exit 0 
           fi
+
+          git add .
+          git commit -m "chore: resolved merge conflicts"
+          # fi
 
       # Create PR with the new branch
       - name: Create Pull Request
