--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Attempt merge
         id: merge-attempt
         run: |
-          git merge origin/test-release-action -Xours || true
+          git merge origin/test-release-action
 
       # Create PR with the new branch
       - name: Create Pull Request
