--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -55,7 +55,7 @@ jobs:
         id: merge-attempt
         run: |
           git merge origin/test-release-action -Xours || true
-          # git push origin test-release-action-2
+          git push origin test-release-action-2
 
       # Create PR with the new branch
       - name: Create Pull Request
