--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -54,6 +54,7 @@
     "@carbon/ibm-products-styles": "^2.59.0-rc.0",
     "@carbon/styles": "1.75.0",
     "@carbon/web-components": "2.25.0",
+    "@lit/context": "^1.1.4",
     "lit": "^3.1.0"
   },
   "devDependencies": {
